unpackaged/main/default/objects/ffirule__IntegrationRuleSourceLineItemTest__c/ffirule__IntegrationRuleSourceLineItemTest__c.object-meta.xml
<CustomObject>
    <label>ClickLink Source Line Item Test</label>
    <nameField>
        <displayFormat>IRTSTSL-{00000000}</displayFormat>
        <label>ClickLink Source Line Item Test</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Source Line Item Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>