unpackaged/main/default/objects/ffirule__IntegrationRuleSourceLineItemTest__c/fields/ffirule__ANumberField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ANumberField__c</fullName>
    <label>A Number Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>