unpackaged/main/default/objects/ffirule__IntegrationRuleSourceLineItemTest__c/fields/ffirule__ClickLinkAnotherSourceLineItemCount__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ClickLinkAnotherSourceLineItemCount__c</fullName>
    <label>ClickLink Another Source Line Item Count</label>
    <summaryForeignKey>ffirule__ClickLinkAnotherSourceTest__c.ffirule__ClickLinkSourceLineItemTest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>