unpackaged/main/default/objects/ffirule__IntegrationRuleSourceLineItemTest__c/fields/ffirule__IntegrationRuleSourceTest__c.field-meta.xml
<CustomField>
    <fullName>ffirule__IntegrationRuleSourceTest__c</fullName>
    <label>ClickLink Source Test</label>
    <referenceTo>ffirule__IntegrationRuleSourceTest__c</referenceTo>
    <relationshipLabel>ClickLink Source Line Item Tests</relationshipLabel>
    <relationshipName>IntegrationRuleSourceLineItemTests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>