unpackaged/main/default/objects/ffirule__IntegrationRuleSourceLineItemTest__c/fields/ffirule__Process__c.field-meta.xml
<CustomField>
    <fullName>ffirule__Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process</label>
    <type>Checkbox</type>
</CustomField>